[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["KZ"]

[tool.poetry.dependencies]
python = "3.7.3"
flake8 = "^3.8.4"
pytest = "^6.2.1"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
